@@ -277,7 +277,7 @@ TlsTransport::processAllWrites( FdSet& fdset )
          else
          {
             struct sockaddr_in servaddr;
-            memset( &servaddr, sizeof(servaddr), 0 );
+            ::memset( &servaddr, 0, sizeof(servaddr) );
             servaddr.sin_family = AF_INET;
             servaddr.sin_port = htons( data->destination.port);
             servaddr.sin_addr =  data->destination.ipv4;
